fixed text wrapping on control panel buttons

--- a/static/controlPanel.css
+++ b/static/controlPanel.css
@@ -30,6 +30,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    white-space: nowrap;
 }
 #right-controls {
     text-align: center;
@@ -40,6 +41,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    white-space: nowrap;
 }
 
 
